<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlanco"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSecundary"
        android:fontFamily="@font/oswald_variable_font_wght"
        android:text="@string/asesoresTitle"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnModulos"
            android:layout_width="330dp"
            android:layout_height="110dp"
            android:background="@drawable/modulos"
            android:fontFamily="@font/oswald_variable_font_wght"
            android:lineSpacingExtra="8sp"
            android:text="@string/btnModulos"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.034" />

        <Button
            android:id="@+id/btnAlumnos"
            android:layout_width="330dp"
            android:layout_height="110dp"
            android:background="@drawable/alumnos"
            android:fontFamily="@font/oswald_variable_font_wght"
            android:text="@string/btnAlumnos"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnModulos"
            app:layout_constraintVertical_bias="0.034" />

        <Button
            android:id="@+id/btnMensajes"
            android:layout_width="330dp"
            android:layout_height="110dp"
            android:background="@drawable/mensajes"
            android:fontFamily="@font/oswald_variable_font_wght"
            android:text="@string/btnMensajes"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAlumnos"
            app:layout_constraintVertical_bias="0.034" />

        <Button
            android:id="@+id/btnStatus"
            android:layout_width="330dp"
            android:layout_height="110dp"
            android:background="@drawable/status"
            android:text="@string/btnStatus"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnMensajes"
            app:layout_constraintVertical_bias="0.034" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>